<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="Distance: "
            android:textColor="@color/black"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="0dp"
            android:textSize="19sp"
            android:layout_width="match_parent">
        </TextView>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:id="@+id/seekBar_value"
                android:text="@string/default_filter_range"
                android:layout_weight="0.8"
                android:layout_height="wrap_content"
                android:textAlignment="center"/>

            <SeekBar
                android:id="@+id/seekBar_range"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:max="50"
                android:progress="5" />
        </TableRow>

        <TextView
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="Categories: "
            android:textColor="@color/black"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:textSize="19sp"
            android:layout_width="match_parent">
        </TextView>

        <RadioGroup
            android:id="@+id/radio_Group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/optionIndoor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Indoor" />
            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/optionOutdoor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Outdoor" />
            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/optionSport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sport" />
            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/optionParty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Party" />

        </RadioGroup>
    </LinearLayout>
</LinearLayout>
