<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/main_actionbar_add"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="@string/filter"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/main_actionbar_search"
        android:icon="@drawable/filter"
        android:title="@string/filter"
        app:showAsAction="ifRoom"/>
</menu>